--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
   <div class="navbar-fixed">
     <nav class="turquoise" >
       <div class="nav-wrapper  container">
-        <a href="/" class="brand-logo ">Darkroom - Milestone 1 - Milestone 2 - Milestone 3 - Milestone 4 </a>
+        <a href="/" class="brand-logo ">Darkroom - Milestone 1 - Milestone 2 - Milestone 3</a>
         <form class="right">
           <div class="input-field ">
             <input id="search" class="left"  type="search" required>
@@ -29,7 +29,7 @@
   </div>
     
     <div class="container">
-        <h1>Image Upload </h1>
+        <h1>Image Upload - Milestone 4</h1>
         <%= typeof msg != 'undefined' ? msg : '' %>
         <form action="/upload" method = "POST" enctype="multipart/form-data">
             <div class="file-field input-field">
